# trading_polymarket_nautilus

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: bug_fix_log.md  implementation_plan.md  live_hardening_status.md  live_health_guard_policy.md  live_testing_plan.md  order_reconciliation_plan.md  polymarket_historical_data.md  wallet_resolution_plan.md  ws_book_recording_format.md
historical/: README.md
historical/backtest/: run.py
historical/explore/: nautilus_loader_test.py
historical/fetch/: gamma_events.py  market_price_history.py  markets.py  record_ws.py  record_ws_full.py
historical/process/: clean_price_history_15min_btcupdown.py  event_tags.py
live/: README.md  alert_monitor.py  config.py  env.py  fill_rehearsal.py  market_data_capture.py  market_metadata.py  node.py  order_truth.py  polymarket_exec_client.py  polymarket_history.py  redeem_oneoff.py  redemption.py  rehearsal.py  resolution.py  resolution_worker.py  run_market_data_capture.py  run_resolution.py  sandbox_order.py  sandbox_wallet.py  soak.py  status.py  status_artifacts.py  trade.py  transaction_attempts.py  wallet_profiles.example.toml  wallet_truth.py
live/docs/: architecture.md  setup_and_first_trade.md
live/profiles/: __init__.py
live/runs/: __init__.py  btc_updown.py  common.py  profile.py  random_signal.py
live/setup/: deposit_wallet_v2.py  generate_wallet.py  init_builder_relayer.py  init_trading.py  set_allowances.py  sweep.py
live/strategies/: btc_updown.py  random_signal.py  windowed.py
tests/live/: benchmark_binance_warmup.py  test_env.py  (+31 more)
(+17 files in other folders)
